# noctivault

./: AGENTS.md  README.md  encdec_sample.py  mypy.ini  pyproject.toml  sample.py
dev-tools/: projsize.py
docs/: api.md  architecture.md  sample.yaml
docs/quickstart_guide/: build_gcp.md
src/: yaml.pyi
src/noctivault/: __init__.py  cli.py  client.py
src/noctivault/app/: resolver.py
src/noctivault/core/: errors.py  value.py
src/noctivault/io/: enc.py  fs.py  yaml.py
src/noctivault/provider/: gcp.py  local_mocks.py  protocol.py
src/noctivault/schema/: models.py
src/noctivault/tree/: node.py
tests/e2e/: test_local_client_e2e.py  test_local_encrypted_e2e.py  test_local_encrypted_key_resolution_e2e.py  test_local_encrypted_passphrase_e2e.py  test_local_encrypted_precedence_e2e.py  test_local_masks_and_missing_e2e.py  test_remote_client_e2e.py  test_remote_negative_e2e.py
tests/integration/: test_cli_entry.py  test_cli_entry_passphrase.py  test_resolver.py  test_resolver_with_protocol.py
tests/unit/: test_cli_local_enc.py  test_fs_resolve_source.py  test_io_enc.py  test_io_fs_yaml.py  test_provider_gcp.py  test_provider_local_mocks.py  test_reference_config_remote_validation.py  test_schema_models.py
